# post_school

best_practices/: CMakeLists.txt
best_practices/src/structure/: flyweight.h
concurrency/: CMakeLists.txt  main.cpp
concurrency/source/: example.h
tryit/: CMakeLists.txt  main.cpp
tryit/examples/: lambda.hpp  move_semantics.hpp
